@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libcthreads],
- [20160404],
+ [20160411],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
