@@ -24,10 +24,11 @@
 
 #include <common.h>
 
-/* If Cygwin libtool DLL support is enabled set LIBCTHREADS_DLL_IMPORT
- * before including libcthreads.h
+/* If Cygwin libtool DLL support is enabled and do not want to create static
+ * executables * set LIBCTHREADS_DLL_IMPORT before including
+ * libcthreads.h
  */
-#if defined( _WIN32 ) && defined( DLL_EXPORT )
+#if defined( _WIN32 ) && defined( DLL_EXPORT ) && !defined( HAVE_STATIC_EXECUTABLES )
 #define LIBCTHREADS_DLL_IMPORT
 #endif
 
